# labcomp

./: .gitignore  CMAkeLists.txt  CMakeLists.txt  README.md
.github/workflows/: main.yml
benchmark_tests/: small.txt
dokumentaatio/: kaytto-ohje.md  testausdokumentti.md  toteutusdokumentti  toteutusdokumentti.md  vaatimusmäärittely.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
include/: binary_heap.hpp  binomial_heap.hpp  d_ary_heap.hpp  pairing_heap.hpp
src/: binary_heap.cpp  binomial_heap.cpp  d_ary_heap.cpp  generate_custom_test.py  heap_benchmarking.cpp  main.cpp  pairing_heap.cpp
tests/: binary_heap_test.cpp  binomial_heap_test.cpp  d_ary_heap_test.cpp  pairing_heap_test.cpp
